java - remove obsolete Utils method